media: Allow WMPI to send playing started notification while playing

Previously MediaWebContentsObserver DCHECKed that an active player
was never added twice. To avoid complicated logic in WMPI to keep track
of when it's okay to send a playing notification to
MediaWebContentsObserver, now it's allowed to send it more than once.

BUG=595903, 595970

Review URL: https://codereview.chromium.org/1810213002

Cr-Commit-Position: refs/heads/master@{#382098}

Former-commit-id: 73fd2eb18f1ed48a1047d737a9db170608ac6f47